--- a/votingSystem/Web.config
+++ b/votingSystem/Web.config
@@ -9,7 +9,11 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="defaultCity" value="London"/>
+    <add key ="defaultCountry" value="UK"/>
+    
   </appSettings>
+  <!--<newUserDefaults city="Chicago" country="USA" language="English" regionCode="1"/>-->
   <system.web>
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
