--- a/votingSystem/votingSystem.csproj
+++ b/votingSystem/votingSystem.csproj
@@ -113,12 +113,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ConfigController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infastructure\appStateHelper.cs" />
     <Compile Include="Infastructure\DayModule.cs" />
     <Compile Include="Infastructure\DayOfWeekHandler.cs" />
+    <Compile Include="Infastructure\NewUserDefaultsSection.cs" />
     <Compile Include="Infastructure\SiteLengthHandler.cs" />
     <Compile Include="Infastructure\TimerModule.cs" />
     <Compile Include="Infastructure\TotalTimeModule.cs" />
@@ -131,6 +134,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\Home\Modules.cshtml" />
+    <Content Include="Views\Config\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
