--- a/votingSystem/packages.config
+++ b/votingSystem/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
+  <package id="Glimpse" version="1.8.2" targetFramework="net46" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net46" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net46" />
   <package id="jQuery" version="1.9.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
